--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-artezan": "ionic build --prod --base-href https://theartezan.xyz/ionic4/"
+    "build-artezan": "ionic build --prod --base-href https://theartezan.xyz/ionic4/",
+    "build:ubuntu": "ng build --prod --base-href http://31.220.52.51:3002"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +28,10 @@
     "@ionic/angular": "^4.0.0-beta.0",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "express": "^4.16.3",
+    "path": "^0.12.7"
+
   },
   "devDependencies": {
     "@angular/cli": "~6.1.1",
