--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdc/web": "^0.38.2",
     "@angular/common": "~6.1.1",
     "@angular/core": "~6.1.1",
     "@angular/forms": "~6.1.1",
@@ -26,12 +27,12 @@
     "@ionic-native/splash-screen": "5.0.0-beta.14",
     "@ionic-native/status-bar": "5.0.0-beta.14",
     "@ionic/angular": "^4.0.0-beta.0",
+    "@ionic/storage": "^2.1.3",
     "core-js": "^2.5.3",
-    "rxjs": "6.2.2",
-    "zone.js": "^0.8.26",
     "express": "^4.16.3",
-    "path": "^0.12.7"
-
+    "path": "^0.12.7",
+    "rxjs": "6.2.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "~6.1.1",
