--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/core": "~6.1.1",
     "@angular/forms": "~6.1.1",
     "@angular/http": "~6.1.1",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
@@ -30,7 +31,8 @@
     "@ionic/storage": "^2.1.3",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/cdk": "^6.2.0"
   },
   "devDependencies": {
     "@angular/cli": "~6.1.1",
