--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@angular-mdc/web": "^0.38.2",
     "@angular/animations": "^6.1.6",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "~6.1.1",
     "@angular/core": "~6.1.1",
     "@angular/forms": "~6.1.1",
     "@angular/http": "~6.1.1",
     "@angular/material": "^6.4.7",
+    "@angular/material-moment-adapter": "^6.4.7",
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
@@ -30,9 +32,9 @@
     "@ionic/angular": "4.0.0-beta.5",
     "@ionic/storage": "^2.1.3",
     "core-js": "^2.5.3",
+    "moment": "^2.22.2",
     "rxjs": "6.2.2",
-    "zone.js": "^0.8.26",
-    "@angular/cdk": "^6.2.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "~6.1.1",
