--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic/storage": "^2.1.3",
     "core-js": "^2.5.3",
     "moment": "^2.22.2",
+    "ng-circle-progress": "^1.2.0",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
