--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:ubuntu": "ng build --prod --base-href http://31.220.52.51:3002"
+    "build:ubuntu": "ng build --prod --base-href http://31.220.52.51:3002",
+    "build-onesignal": "ng build --prod --base-href http://31.220.52.51:3002 && npm run copy-onesignal",
+    "copy-onesignal": "copyfiles copyfiles -u 1 onesignal/*.js onesignal/*.json  www",
+    "android-prod": "ionic cordova build android --prod",
+    "android-release": "ionic cordova build android --prod --release"
   },
   "private": true,
   "dependencies": {
@@ -27,13 +31,22 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@ionic-native/core": "5.0.0-beta.15",
+    "@ionic-native/onesignal": "^4.15.0",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "4.0.0-beta.5",
     "@ionic/storage": "^2.1.3",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.3",
     "moment": "^2.22.2",
     "ng-circle-progress": "^1.2.0",
+    "onesignal-cordova-plugin": "^2.4.4",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
@@ -64,5 +77,21 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "onesignal-cordova-plugin": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
