--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "4.0.0-beta.5",
     "@ionic/storage": "^2.1.3",
+    "@types/socket.io-client": "^1.4.32",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -48,6 +49,7 @@
     "ng-circle-progress": "^1.2.0",
     "onesignal-cordova-plugin": "^2.4.4",
     "rxjs": "6.2.2",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
