--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ionic/storage": "^2.1.3",
     "@types/socket.io-client": "^1.4.32",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.1.4",
