--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "~6.1.1",
     "@ionic-native/camera": "^5.0.0-beta.21",
     "@ionic-native/core": "5.0.0-beta.15",
+    "@ionic-native/launch-navigator": "^5.0.0-beta.21",
     "@ionic-native/onesignal": "^4.15.0",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
@@ -41,7 +42,9 @@
     "@types/socket.io-client": "^1.4.32",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -53,6 +56,7 @@
     "onesignal-cordova-plugin": "^2.4.4",
     "rxjs": "6.2.2",
     "socket.io-client": "^2.1.1",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -94,7 +98,10 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "OKHTTP_VERSION": "3.+"
+      }
     },
     "platforms": [
       "android"
